Implemented automatic baseline finding